[release] Prepare next development version [skip ci]